new changes layout admin and signup page
new changes by sourabh related to layout signup etc

--- a/public_html/masteradmin/assets/admin/layout4/css/layout.css
+++ b/public_html/masteradmin/assets/admin/layout4/css/layout.css
@@ -187,7 +187,7 @@ Page Header
           .page-header.navbar .top-menu .navbar-nav > li.dropdown > .dropdown-toggle:focus {
             background: none; }
         .page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-menu {
-          margin-top: 9px;
+          margin-top: -15px;
           -webkit-border-radius: 4px;
           -moz-border-radius: 4px;
           -ms-border-radius: 4px;
@@ -573,7 +573,7 @@ Page Header
       .page-header.navbar .top-menu .navbar-nav > li.dropdown-user .dropdown-toggle {
         padding: 25px 6px 18px 6px; }
         .page-header.navbar .top-menu .navbar-nav > li.dropdown-user .dropdown-toggle .username.username-hide-on-mobile {
-          display: none; }
+           color: #000!important}
         .page-header.navbar .top-menu .navbar-nav > li.dropdown-user .dropdown-toggle img {
           margin-left: 0; }
       .page-header.navbar .top-menu .navbar-nav > li.dropdown-language .dropdown-toggle {
